@@ -1,5 +1,10 @@
 2007-10-22  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/gflare/gflare.c (plugin_do_non_asupsample): fixed
+	initialisation of pixel regions (bug #488845).
+
+2007-10-22  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/gflare/gflare.c: formatting.
 
 2007-10-22  Sven Neumann  <sven@gimp.org>
